# Sergeant

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  release-proof.txt  vscode-extension.js
.github/: copilot-instructions.md  live-certification-trigger.txt  pull_request_template.md
docs/: 00-product-brief.md  02-coderabbit-lessons.md  06-review-verdicts.md  18-review-batch-workflow.md  19-thetechguy-engineering-standard.md  21-open-source-reviewer-patterns.md  22-semantic-open-model-review.md  25-cloudflare-workers-ai.md  25-independent-pr-reviewer.md  26-cloudflare-connector-assurance.md  26-name-and-finish.md  27-cloudflare-live-certification.md  27-sentinel-smoke-test.md  29-cpl-finding-adjudication.md  34-public-boundary-and-live-fetch.md  35-cpl-council-command-and-experience.md  36-production-hardening.md  39-review-intelligence-proof.md  40-reviewer-head-to-head.md  42-full-cloudflare-council-certification-assurance.md  47-adaptive-multilingual-curriculum.md  49-coordinate-0.4.1-release-assurance.md  50-actions-evidence-preservation.md  51-cross-repository-learning-intake.md  EXTERNAL_REPOSITORY_LEARNING_POLICY.md  hackathon-submission.md  pre-v2-cleanup-plan.md  sergeant-v2-master-specification.html  submission-proof.md
main_review/: adaptive_curriculum.py  battle_compare.py  battle_tests.py  capability_engine.py  capability_policy.py  challenge.py  cli.py  cloudflare_cli.py  cloudflare_gateway.py  cloudflare_incremental_certification.py  cloudflare_models.py  cloudflare_usage.py  consensus.py  cpl_council.py  cpl_council_prompt.py  (+72 more)
(+257 files in other folders)
