[project]
name = "main-review"
version = "0.1.0"
description = "Repository intelligence and final engineering review foundation."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
main-review = "main_review.cli:main"

[tool.setuptools]
packages = ["main_review"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
